--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.highcharts-credits {
+  display: none !important;
+}
+.card-bg {
+  background-image: url(../src/imgs/card-png.png);
+}
+.scrollbar-hide {
+  scrollbar-width: none;
+}
