--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,15 @@
   .highcharts-legend.highcharts-no-tooltip{
     display: none!important;
   }
+
+  /* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
